--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,13 @@
 
   <body>
     <div class="container-fluid">
-      <nav class="navbar">
-        <div class="home-link">
-          <%= link_to "QuestQuill", root_path %>
+      <nav class="navbar d-flex justify-content-center justify-content-sm-start">
+        <div class="home-link d-flex" >
+          <%= link_to "QuestQuill", root_path, class: 'd-flex align-items-center me-2'%> <!-- me-2 for right margin per bootstrap v5 gem docs-->
+
+          <div class="logo">
+            <%= image_tag "logo.png" %>
+          </div>
         </div>
           <% if current_user %>
           <div>
@@ -29,9 +33,7 @@
         </div>
       <% end %>
       <%= yield %>
-      <div class="logo">
-        <%= image_tag "logo.png" %>
-      </div>
+      
     </div>
   </body>
 </html>
