view + wip: testing and styling of the user dashboard

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,9 @@
-<center>Welcome, DM <%= @user.username %></center>
+<left><div class="user-welcome d-flex align-items-baseline border-bottom mx-5 justify-content-bewteen">
+  <h1 class="me-2">Welcome, DM <%= @user.username %></h1><p> Active Campaigns</p>
+  <div>
+  </div>
+</div></left>
+
+<div class="card">
+  
+</div>
