--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
           </div>
         </div>
           <% if current_user %>
+          <div class="generator-button">
+            <%= button_to "+ New Campaign", "/users/#{@user.id}/campaigns/new", method: :get %>
+          </div>
           <div>
             <%= link_to  "Log Out", "/", data: { turbo_method: :delete } %>
           </div>
