--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -12,7 +12,7 @@
       <%= form.number_field :player_num, class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= form.label :themes, "Password" %>
+      <%= form.label :themes, "Campaign Themes" %>
       <%= form.text_field :themes, class: "form-control" %>
     </div>
     <center>
