--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <div class="container-fluid">
-      <nav class="navbar d-flex justify-content-center justify-content-sm-start">
+      <nav class="navbar d-flex justify-content-sm-between justify-content-start">
         <div class="home-link d-flex" >
           <%= link_to "QuestQuill", root_path, class: 'd-flex align-items-center me-2'%> <!-- me-2 for right margin per bootstrap v5 gem docs-->
 
@@ -25,7 +25,7 @@
           <div class="generator-button">
             <%= button_to "+ New Campaign", "/users/#{params[:id]}/campaigns/new" , method: :get, class: "d-flex" %>
           </div>
-          <div>
+          <div class="logout d-flex justify-content-end">
             <%= link_to  "Log Out", "/", data: { turbo_method: :delete } %>
           </div>
           <% end %>
