--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -4,18 +4,18 @@
 <div class="form-center">
   <%= form_with url: user_campaigns_path(params[:user_id]), method: :post, data: { turbo: false } do |form|  %>
     <div class="form-group">
-      <%= form.label :name, "Campaign Name" %>
+      <strong><%= form.label :name, "Campaign Name" %></strong>
       <%= form.text_field :name, class: "form-control" %>
     </div>
     <div class="form-group">
-      <%= form.label :player_num, "Number of Players" %>
+      <strong><%= form.label :player_num, "Number of Players" %></strong>
       <%= form.number_field :player_num, class: "form-control" %>
     </div>
+    <strong><p>Campaign Themes</p></strong>
     <div class="form-group">
-      <p>Campaign Themes</p>
       <% @themes.each do |theme| %>
-        <%= form.check_box :themes, { multiple: true }, theme, nil %>
-        <%= form.label theme %>
+        <p><%= form.label theme %>
+        <%= form.check_box :themes, { multiple: true }, theme, nil %></p>
       <% end %>
     </div>
     <center>
