--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,7 +101,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
-  margin-top: 150px;
+  padding-top: 20px;
 }
 
 .form-center form {
@@ -123,4 +123,9 @@ body {
 .button-style[type="submit"] {
   border-radius: 20px;
   border: none;
+}
+
+.or-divider {
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
