--- a/app/views/users/login/new.html.erb
+++ b/app/views/users/login/new.html.erb
@@ -18,7 +18,7 @@
 
 <center><h3 class="or-divider">OR</h3></center>
 
-<div class="form-center">
+<div class="form-center" id="passwordless">
 <%= form_with url: email_login_path, method: :get, data: { turbo: false } do |form| %>
   <div class="form-group">
   <%= form.label :email_passwordless, "Email" %>
