fix 2 for caching

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 </div></left>
 
 <div class="user_campaigns">
-  <% cache("users_campaigns") do %>
+  <% cache("users_campaigns-#{@user.id}") do %>
     <table class="table">
       <thead>
         <tr>
