--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,7 +106,6 @@ body {
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding-top: 20px;
 }
 
 .form-center form {
@@ -130,6 +129,16 @@ body {
   border: none;
 }
 
+.button-style-link {
+  background-color: #0b6d2a;
+  color: white;
+  font-weight: bold;
+  padding: 7px 12px;
+  border-radius: 20px;
+  border: none;
+  text-decoration: none;
+}
+
 .logout {
   width: 264px
 }
@@ -137,5 +146,5 @@ body {
 
 .or-divider {
   margin-top: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
