--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<left><div class="user-welcome d-flex align-items-baseline border-bottom mx-5 justify-content-bewteen">
-  <h1 class="me-2">Welcome, DM <%= @user.username %></h1><p>Active Campaigns</p>
+<left><div class="user-welcome d-flex align-items-baseline border-bottom mx-5 justify-content-between">
+  <h1 class="me-2">Welcome, DM <%= @user.username %></h1> <%= button_to "+ New Campaign", "/users/#{params[:id]}/campaigns/new" , method: :get, class: "d-flex" %>
 </div></left>
 
 <div class="user_campaigns">
@@ -15,7 +15,7 @@
       <tbody>
           <% @user.campaigns.each do |campaign| %>
         <tr>
-            <td><%= link_to campaign[:name].capitalize %></td>
+            <td><%= link_to campaign[:name].capitalize, user_campaign_path(user_id: @user.id, id: campaign[:id]), method: :get %></td>
             <td><%= campaign[:player_num] %></td>
             <td><%= campaign[:themes] %></td>
           <% end %>
