add placeholder links for the towns and npc indexes

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -8,3 +8,9 @@
   <p><%= link_to "Generate NPC" %></p>
 
 </section>
+
+<section class="indexes">
+  <p><%= link_to "My Towns" %></p>
+
+  <p><%= link_to "My NPCs" %></p>
+</section>
