--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -4,13 +4,14 @@
 
 <section class="generators">
   <p><%= link_to "Generate Town" %></p>
-
-  <p><%= link_to "Generate NPC" %></p>
+  <p><%= button_to "Generate NPC", user_campaign_npcs_path(user_id: @user_id, campaign_id: @campaign.id) %></p>
+  <p><%= button_to "Generate Quests", user_campaign_quests_path(user_id: @user_id, campaign_id: @campaign.id) %></p>
 
 </section>
 
 <section class="indexes">
   <p><%= link_to "My Towns" %></p>
 
-  <p><%= link_to "My NPCs" %></p>
+  <p><%= link_to "My NPCs", user_campaign_npcs_path(user_id: @user_id, campaign_id: @campaign.id) %></p>
+  <p><%= link_to "My Quests", user_campaign_quests_path(user_id: @user_id, campaign_id: @campaign.id) %></p>
 </section>
