--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -6,7 +6,7 @@
   <section class="generators">
     <p><%= button_to "Generate Town", user_campaign_towns_path(user_id: @user_id, campaign_id: @campaign.id), class: "button-style-link"  %></p>
     <p><%= button_to "Generate NPC", user_campaign_npcs_path(user_id: @user_id, campaign_id: @campaign.id), class: "button-style-link" %></p>
-    <p><%= button_to "Generate Quests", user_campaign_quests_path(user_id: @user_id, campaign_id: @campaign.id), class: "button-style-link" %></p>
+    <p><%= button_to "Generate Quest", user_campaign_quests_path(user_id: @user_id, campaign_id: @campaign.id), class: "button-style-link" %></p>
   </section>
 
   <section class="indexes">
